--- a/main.html
+++ b/main.html
@@ -7,7 +7,22 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>FEEDBACK FORM</h1>
+	<form method="post">
+		<label for="name">Name</label>
+			<input id="name" type="text" placeholder="Enter your NAME"minlength="3" maxlength="50" required/>
+<br>
+		<label id="portfolio">Portfolio</label>
+			<input type="url" id="portfolio" placeholder="paste your URL" required/>
+<br>
+		<label id="favColor">Favorite Color</label>
+		<input type="color" id="favColor" required/>
+<br>
+		<label id="likeness">Likeness</label>
+		<input type="range" id="likeness" min="1" max="100" required/>
+<br>
+	    <input type="button" value="Submit"> 
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
