--- a/main.html
+++ b/main.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-	<h1>FEEDBACK FORM</h1>
 	<form method="post">
+		FEEDBACK FORM
+<br>		
 		<label for="name">Name</label>
 			<input id="name" type="text" placeholder="Enter your NAME"minlength="3" maxlength="50" required/>
 <br>
@@ -19,7 +20,7 @@
 		<input type="color" id="favColor" required/>
 <br>
 		<label id="likeness">Likeness</label>
-		<input type="range" id="likeness" min="1" max="100" required/>
+		<input type="range" id="likeness" min="1" max="100"/>
 <br>
 	    <input type="button" value="Submit"> 
 	</form>
