--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 		<label id="likeness">Likeness</label>
 		<input type="range" id="likeness" min="1" max="100"/>
 <br>
-	    <input type="button" value="Submit"> 
+	    <button type="button" value="submit">SUBMIT</button>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
