--- a/main.html
+++ b/main.html
@@ -7,9 +7,8 @@
 </head>
 
 <body>
-	<form method="post">
-		FEEDBACK FORM
-<br>		
+	<h1>Feedback Form</h1>
+	<form method="post">		
 		<label for="name">Name</label>
 			<input id="name" type="text" placeholder="Enter your NAME"minlength="3" maxlength="50" required/>
 <br>
