--- a/main.html
+++ b/main.html
@@ -12,13 +12,13 @@
 		<label for="name">Name</label>
 			<input id="name" type="text" placeholder="Enter your NAME"minlength="3" maxlength="50" required/>
 <br>
-		<label id="portfolio">Portfolio</label>
+		<label for="portfolio">Portfolio</label>
 			<input type="url" id="portfolio" placeholder="paste your URL" required/>
 <br>
-		<label id="favColor">Favorite Color</label>
+		<label for="favColor">Favorite Color</label>
 		<input type="color" id="favColor" required/>
 <br>
-		<label id="likeness">Likeness</label>
+		<label for="likeness">Likeness</label>
 		<input type="range" id="likeness" min="1" max="100"/>
 <br>
 	    <button type="button" value="submit">SUBMIT</button>
