--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 		<label for="likeness">Likeness</label>
 		<input type="range" id="likeness" min="1" max="100"/>
 <br>
-	    <button type="button" value="submit">SUBMIT</button>
+	    <button type="submit" value="submit">SUBMIT</button>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
